//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  last_name String [not null]
  email String [unique, not null]
  password String [not null]
  confirmed_email Boolean [default: false]
  role String [default: 'user']
  created_at DateTime [default: `now()`, not null]
  products Product [not null]
  orders Order [not null]
  Payments Payments [not null]
  subscriptionProvider String
  subscriptionId String
  status String
  startedAt DateTime
  userSubscriptionId Int
}

Table SubscriptionPlan {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  price Float [not null]
  created_at DateTime [default: `now()`, not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  created_at DateTime [default: `now()`, not null]
  products ProductCategory [not null]
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  price Float [not null]
  description String
  stock Int [default: 0]
  image String
  slug String [unique]
  authorId Int [not null]
  author User [not null]
  created_at DateTime [default: `now()`, not null]
  categories ProductCategory [not null]
  orders Order [not null]
  orderDetails OrderDetails [not null]
}

Table ProductCategory {
  id Int [pk, increment]
  productId Int [not null]
  product Product [not null]
  categoryId Int [not null]
  category Category [not null]
}

Table Payments {
  id Int [pk, increment]
  total Float [not null]
  user User [not null]
  userId Int [not null]
  order Order
  orderId Int
  paymentId Int
  provider String [not null]
  created_at DateTime [default: `now()`, not null]
}

Table Order {
  id Int [pk, increment]
  total Float [not null]
  user User [not null]
  userId Int [not null]
  created_at DateTime [default: `now()`, not null]
  products Product [not null]
  payments Payments [not null]
  orderDetails OrderDetails [not null]
}

Table OrderDetails {
  id Int [pk, increment]
  quantity Int [not null]
  price Float [not null]
  product Product [not null]
  productId Int [not null]
  order Order [not null]
  orderId Int [not null]
  created_at DateTime [default: `now()`, not null]
}

Table OrderToProduct {
  ordersId Int [ref: > Order.id]
  productsId Int [ref: > Product.id]
}

Ref: Product.authorId > User.id

Ref: ProductCategory.productId > Product.id

Ref: ProductCategory.categoryId > Category.id

Ref: Payments.userId > User.id

Ref: Payments.orderId > Order.id

Ref: Order.userId > User.id

Ref: OrderDetails.productId > Product.id

Ref: OrderDetails.orderId > Order.id